; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_process.c_get_pal_call_result.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_process.c_get_pal_call_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.exit_ctl_data }
%struct.exit_ctl_data = type { i64, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32, i32, i32 }

@EXIT_REASON_PAL_CALL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [26 x i8] c"Mis-set for exit reason!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kvm_vcpu*)* @get_pal_call_result to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_pal_call_result(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca %struct.kvm_vcpu*, align 8
  %3 = alloca %struct.exit_ctl_data*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %2, align 8
  %4 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %5 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  store %struct.exit_ctl_data* %6, %struct.exit_ctl_data** %3, align 8
  %7 = load %struct.exit_ctl_data*, %struct.exit_ctl_data** %3, align 8
  %8 = getelementptr inbounds %struct.exit_ctl_data, %struct.exit_ctl_data* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @EXIT_REASON_PAL_CALL, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %45

12:                                               ; preds = %1
  %13 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %14 = load %struct.exit_ctl_data*, %struct.exit_ctl_data** %3, align 8
  %15 = getelementptr inbounds %struct.exit_ctl_data, %struct.exit_ctl_data* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 3
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @vcpu_set_gr(%struct.kvm_vcpu* %13, i32 8, i32 %19, i32 0)
  %21 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %22 = load %struct.exit_ctl_data*, %struct.exit_ctl_data** %3, align 8
  %23 = getelementptr inbounds %struct.exit_ctl_data, %struct.exit_ctl_data* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @vcpu_set_gr(%struct.kvm_vcpu* %21, i32 9, i32 %27, i32 0)
  %29 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %30 = load %struct.exit_ctl_data*, %struct.exit_ctl_data** %3, align 8
  %31 = getelementptr inbounds %struct.exit_ctl_data, %struct.exit_ctl_data* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @vcpu_set_gr(%struct.kvm_vcpu* %29, i32 10, i32 %35, i32 0)
  %37 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %38 = load %struct.exit_ctl_data*, %struct.exit_ctl_data** %3, align 8
  %39 = getelementptr inbounds %struct.exit_ctl_data, %struct.exit_ctl_data* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = call i32 @vcpu_set_gr(%struct.kvm_vcpu* %37, i32 11, i32 %43, i32 0)
  br label %48

45:                                               ; preds = %1
  %46 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %47 = call i32 @panic_vm(%struct.kvm_vcpu* %46, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %48

48:                                               ; preds = %45, %12
  ret void
}

declare dso_local i32 @vcpu_set_gr(%struct.kvm_vcpu*, i32, i32, i32) #1

declare dso_local i32 @panic_vm(%struct.kvm_vcpu*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
